--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-21  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* m4/gl-comp.m4: Update.  (Bug#11285)
+
 2012-04-20  Ludovic Courtès  <ludo@gnu.org>
 
 	* configure.in: Don't use the -R option (Bug#11251).
