--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-21  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* lisp.mk (lisp): Update.
+
 2012-04-20  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* keyboard.c (process_pending_signals): Define only if SYNC_INPUT.
