--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-21  Leo Liu  <sdl.web@gmail.com>
+
+	* net/rcirc.el (rcirc): Avoid error when process-contact returns
+	t.
+
 2012-04-21  Michael Vehrs  <Michael.Burschik@gmx.de>
 
 	* woman.el: Add support for "T{ T}" tbl syntax, and fix the
