Don't add modes to which-func-modes if already set to t.
* lisp/progmodes/verilog-mode.el (verilog-mode): Check whether
  which-func-modes is t before adding verilog-mode.
  Reported by Andy Moreton <andrewjmoreton@gmail.com>.

* lisp/mh-e/mh-folder.el (top): Check whether which-func-modes
  is t before adding mh-folder-mode.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,7 +1,12 @@
+2012-04-21  Juanma Barranquero  <lekktu@gmail.com>
+
+	* progmodes/verilog-mode.el (verilog-mode): Check whether
+	which-func-modes is t before adding verilog-mode.
+	Reported by Andy Moreton <andrewjmoreton@gmail.com>.
+
 2012-04-21  Leo Liu  <sdl.web@gmail.com>
 
-	* net/rcirc.el (rcirc): Avoid error when process-contact returns
-	t.
+	* net/rcirc.el (rcirc): Avoid error when process-contact returns t.
 
 2012-04-21  Michael Vehrs  <Michael.Burschik@gmx.de>
 
