--- a/lisp/mh-e/ChangeLog
+++ b/lisp/mh-e/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-21  Juanma Barranquero  <lekktu@gmail.com>
+
+	* mh-folder.el (top): Check whether which-func-modes is t before
+	adding mh-folder-mode.
+
 2011-11-20  Bill Wohler  <wohler@newt.com>
 
 	* Release MH-E version 8.3.1.
