--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-21  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* progmodes/which-func.el (which-func-current): Quote %
+	characters for mode-line processing.
+
 2012-04-21  Chong Yidong  <cyd@gnu.org>
 
 	* xml.el (xml-parse-region, xml-parse-tag): Avoid errors due to
